==========================================================
The current maintainer of this library is the
RIPE NCC Global Information Infrastructure department.

You can reach us at https://bitbucket.org/ripencc/bgpdump

PLEASE DO NOT E-MAIL INDIVIDUAL DEVELOPERS ABOUT
ISSUES, AS YOUR E-MAIL MAY BE LOST
==========================================================

2016-09-15 Colin Petrie <cpetrie@ripe.net> v1.5.0
	* Many security fixes, crashes, segfaults, memory leaks fixed.
	* Many fixes provided by Christoph Biedl from Debian port
	* Fuzzed inputs, hints and ideas provided by Guillaume Valadon
	* Thread-safety fixes from CAIDA/bgpstream version of bgpdump
	* version bump as new fields have been added to structs, apps
	  should be recompiled

2015-11-05 Colin Petrie <cpetrie@ripe.net>
	* Adding support for draft-petrie-grow-mrt-add-paths
	  Note that this adds various output format changes, when reading messages
	  with Add-path Path-IDs in them, there are extra columns and fields in
	  the bgpdump output

2015-10-08 Alexis Fasquel <alexis@pch.net>
	* Adding support for Extended Timestamp MRT Header corresponding to MRT type BGP4MP_ET
	  Note that this changes the semantics of the output of bgpdump - when a messages
	  with Extended Timestamp MRT Header is parsed, the microseconds attribute
	  is appended to the timestamp (.xxxxxx)

2015-09-19 Colin Petrie <cpetrie@ripe.net>
	* Adding support for BGP4MP_MESSAGE_LOCAL and BGP4MP_MESSAGE_AS4_LOCAL subtypes
	  Note that this changes the semantics of the output of bgpdump - when an entry is
	  prefixed by BG4MP_LOCAL (-m/-M) then the output fields are the *destination* IP/AS
	  rather than the source.

2015-07-16 Max Lapan <mlapan@ripe.net>
	* -p option to show packet index

2011-01-25 Devin Bayer <dbayer@ripe.net>
	* move development to bitbucket

2010-10-21 Devin Bayer <dbayer@ripe.net> v1.4.99.13
	* fix configure script for Darwin

2010-09-24 Devin Bayer <dbayer@ripe.net> v1.4.99.12
	* Remove --disable-ipv6 flag